aprendendo sobre hooks de rotas como useLocation

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,11 +21,11 @@
   "rules": {
     "indent": [
       "error",
-      2
+      4
     ],
     "linebreak-style": [
       "error",
-      "unix"
+      "windows"
     ],
     "quotes": [
       "error",
